--- a/lecture_day1-beginner.Rmd
+++ b/lecture_day1-beginner.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "R workshop"
 author: "Aurélien Ginolhac"
-date: "2nd June 2016"
+date: "2^nd^ June 2016"
 output:
   ioslides_presentation:
     css: style.css
